# octo-code-agent

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  PROJECT_ANALYSIS.md  README.md  flake.nix  install.sh
.github/workflows/: ci.yml  release.yml
crates/octo-agent/: Cargo.toml
crates/octo-agent/src/: agent.rs  event.rs  lib.rs  prompt.rs
crates/octo-cli/: Cargo.toml
crates/octo-cli/src/: interactive.rs  main.rs  noninteractive.rs  output.rs  permission_ui.rs  repl.rs  setup.rs
crates/octo-cli/src/tui/: dialogs.rs  markdown.rs  mod.rs  permission.rs
crates/octo-core/: Cargo.toml
crates/octo-core/src/: config.rs  error.rs  message.rs  model.rs  provider.rs  session.rs  team.rs  tests.rs  tool.rs
crates/octo-providers/: Cargo.toml
crates/octo-providers/src/: lib.rs  openai.rs
crates/octo-storage/: Cargo.toml
crates/octo-storage/migrations/: 001_initial.sql
crates/octo-storage/src/: database.rs  message_repo.rs  session_repo.rs  tests.rs
crates/octo-tools/: Cargo.toml
crates/octo-tools/src/: bash.rs  coderlm.rs  edit.rs  glob_tool.rs  grep.rs  lib.rs  ls.rs  send_message.rs  task_mgmt.rs  team.rs  tests.rs  view.rs  write.rs
docs/: architecture-en.md  architecture-ko.md  usage-en.md  usage-ko.md
playground/: index.html
src/: lib.rs  main.rs
src/agent/: agent.rs  event.rs
src/cli/: interactive.rs  mod.rs  noninteractive.rs  output.rs  permission_ui.rs  repl.rs
src/cli/tui/: dialogs.rs  mod.rs  permission.rs
src/core/: config.rs  message.rs  mod.rs  model.rs  permission.rs  provider.rs  tests.rs  tool.rs
src/providers/: mod.rs  openai.rs
src/storage/: database.rs  message_repo.rs  mod.rs  session_repo.rs  tests.rs
src/tools/: bash.rs  coderlm.rs  edit.rs  glob_tool.rs  grep.rs  ls.rs  mod.rs  send_message.rs  task_mgmt.rs  team.rs  tests.rs  view.rs  write.rs
