[workspace]
resolver = "2"
members = [
    "crates/octo-core",
    "crates/octo-providers",
    "crates/octo-tools",
    "crates/octo-agent",
    "crates/octo-storage",
    "crates/octo-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
reqwest-eventsource = "0.6"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "chrono"] }
clap = { version = "4", features = ["derive", "env"] }
dirs = "6"
async-stream = "0.3"
futures-core = "0.3"

# Internal crates
octo-core = { path = "crates/octo-core" }
octo-providers = { path = "crates/octo-providers" }
octo-tools = { path = "crates/octo-tools" }
octo-agent = { path = "crates/octo-agent" }
octo-storage = { path = "crates/octo-storage" }
