[package]
name = "octo-code-agent"
version = "0.1.0"
edition = "2021"
authors = ["johunsang <johunsang@gmail.com>"]
description = "AI coding assistant with parallel multi-agent coordination"
license = "MIT"
repository = "https://github.com/johunsang/octo-code-agent"
homepage = "https://github.com/johunsang/octo-code-agent"
keywords = ["ai", "coding-assistant", "agent", "cli", "llm"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
include = [
    "src/**/*",
    "migrations/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[[bin]]
name = "octo-code"
path = "src/main.rs"

[lib]
name = "octo_code_agent"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID and time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Async utilities
async-trait = "0.1"
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }

# HTTP client (OpenAI-compatible APIs)
reqwest = { version = "0.12", features = ["json", "stream"] }
reqwest-eventsource = "0.6"

# Database (SQLite)
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "chrono"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }
dirs = "6"

# Stream utilities
async-stream = "0.3"
futures-core = "0.3"

# File operations
glob = "0.3"
regex = "1"

# Terminal UI
crossterm = { version = "0.28", features = ["event-stream"] }
ratatui = "0.29"
tui-textarea = "0.7"

[dev-dependencies]
tempfile = "3"
