[package]
name = "octo-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "octo-code"
path = "src/main.rs"

[dependencies]
octo-core = { workspace = true }
octo-providers = { workspace = true }
octo-tools = { workspace = true }
octo-agent = { workspace = true }
octo-storage = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
crossterm = { version = "0.28", features = ["event-stream"] }
dirs = { workspace = true }
ratatui = "0.29"
tui-textarea = "0.7"
async-trait = { workspace = true }
