[package]
name = "octo-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
futures-core = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
