[package]
name = "octo-providers"
version.workspace = true
edition.workspace = true

[dependencies]
octo-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
reqwest = { workspace = true }
reqwest-eventsource = { workspace = true }
async-stream = { workspace = true }
futures-core = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
