[package]
name = "octo-tools"
version.workspace = true
edition.workspace = true

[dependencies]
octo-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
glob = "0.3"
regex = "1"
tokio-util = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tempfile = "3"
async-trait = { workspace = true }
